# ortsa

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.venv-reqtest/: pyvenv.cfg
.venv-tmp/: pyvenv.cfg
.venv-verify/: pyvenv.cfg
HTML макеты/: astrogen-admin-v2.html  astrogen-auth-popup.html  astrogen-cabinet.html  astrogen-landing.html  landing_honest_review.html  step3-wizard.html
alembic/: env.py
app/: main.py
deploy/: Caddyfile.prod.example  cron.backup.example
docs/: ADMIN_ANALYTICS_AND_METRICS.md  ADMIN_PANEL_FUTURE.md  ANALYTICS_EVENT_SCHEMA.md  BRAND_BOOK_AND_UI_SYSTEM_ANTD_V5.md  BUSINESS_LOGIC.md  CI_CD_GITHUB_GITLAB_BEGINNER_GUIDE.md  CODE_REVIEW_RISK_ASSESSMENT_P0_P3.md  DEPLOY_URLS.md  DOCUMENTATION_BACKLOG_PLAN.md  FEATURE_GAPS_AND_DELETE_CANDIDATES.md  KERYKEION_V5_MIGRATION_PLAN.md  KERYKEION_V5_REGRESSION_PACK.md  OPS_DATA_RETENTION.md  PLATFORM_ROLLOUT_PLAN.md  PRODUCTION_IMPLEMENTATION.md  PRODUCTION_READINESS_AND_GROWTH_PLAN.md  PRODUCT_AND_ECONOMICS_STRATEGY_3_5_YEARS.md  PRODUCT_FLOW_AND_BUSINESS_LOGIC.md  PROJECT_MASTER_OPERATING_DOCUMENT.md  ROUTING_MAP.md  SEC_DOCS_VERIFY_TLS_CALLBACKS_BACKUP_CHECKLIST.md  SEO_STRATEGY_FULL.md  TEST_COVERAGE_BACKLOG.md  TRANSITS_PROGRESSIONS_IMPLEMENTATION_PLAN.md  URL_SPACE_ARCHITECTURE_ROADMAP.md
frontend/: .env.development  .env.example  README.md  (+5 more)
frontend-admin/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+434 files in other folders)
